# boolcalc

./: .gitignore  CMakeLists.txt  Makefile  README.md  avltree.h  boolcalc.cpp  boolexpr.cpp  boolexpr.h  errors.h  formulaenode.cpp  formulaenode.h  helpers.h  run-autograding.sh
.github/classroom/: autograding.json
.github/workflows/: ci.yml
